# WroCppEffectiveModernCMakeProject

./: .gitattributes  README.md
ModernCalculator/: .clang-tidy  .gitlab-ci.yml  CMakeGraphVizOptions.cmake  CMakeLists.txt
ModernCalculator/cmake/: UseSanitizer.cmake
ModernCalculator/src/: CMakeLists.txt
ModernCalculator/src/CalculationsHistoryParser/: CMakeLists.txt
ModernCalculator/src/CalculationsHistoryParser/HistoryParserInterface/: CMakeLists.txt  IExpressionHistoryParser.h
ModernCalculator/src/CalculationsHistoryParser/JsonParser/: CMakeLists.txt  JsonStringExpressionHistoryParser.h
ModernCalculator/src/CalculationsHistoryParser/JsonParser/test/: CMakeLists.txt  JsonStringExpressionHistoryParserTests.cpp
ModernCalculator/src/CalculatorApp/: CMakeLists.txt  CalculatorMainWindow.cpp  main.cpp
ModernCalculator/src/ExpressionCalculatorWidget/: .clang-tidy  CMakeLists.txt  CalculableLineEdit.cpp  CalculableLineEdit.h  CalculatorWidget.cpp  CalculatorWidget.h
ModernCalculator/src/ExpressionParser/: CMakeLists.txt  StringExpressionCalculator.cpp  StringExpressionCalculator.h
ModernCalculator/src/ExpressionParser/test/: .clang-tidy  CMakeLists.txt
ModernCalculator/src/FileLoader/: CMakeLists.txt  FileLoader.cpp  FileLoader.h  FileWriter.cpp
StandardCalculator/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.py
StandardCalculator/cmake/: UseCCache.cmake  UseClangTidy.cmake  UseCodeCoverage.cmake
StandardCalculator/src/: CMakeLists.txt  CalculableLineEdit.cpp  CalculableLineEdit.h  CalculatorMainWindow.cpp  CalculatorMainWindow.h  CalculatorWidget.h  ExpressionData.h  FileWriter.h  JsonStringExpressionHistoryParser.cpp  JsonStringExpressionHistoryParser.h  StringExpressionCalculator.cpp  StringExpressionCalculator.h  main.cpp
StandardCalculator/test/: CMakeLists.txt  StringExpressionCalculatorTests.cpp  testsMain.cpp
